# HyperLiquidMM

./: .gitignore  README.md  analyze_trades.py  docker-compose.yml  last_hour_fills.txt  latest_fills.txt  latest_logs.txt
backend/: analyze_algo_60m.py  calculate_hourly_fees.py  calculate_session_fees.py  check_ena_meta.py  check_fees.py  check_pnl.py  check_pnl_30m.py  check_pnl_40m.py  check_real_fees.py  flush_positions.py
backend/mm-engine-rs/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/mm-engine-rs/src/: exchange.rs  execution.rs  ingestor.rs  main.rs  market_maker.rs  monitor.rs  persistence.rs  publisher.rs  risk.rs  signing.rs
docs/: HyperLiquidMM_SETUP.md  market_maker_plan.md  monte_carlo_spread_sim.py
scripts/: Dockerfile.mm_screener  analyze_ticks.py  audit_performance.py  audit_trades.py  auto_rank_coins.py  backtest_replay.py  check_data_integrity.py  cron_ranker.sh  csv_to_parquet.py  data_retention.sh  mm_asset_screener.py  mm_guardian.py  requirements.txt  start_mm_bot.sh  watchdog_mm.sh
