[package]
name = "mm-engine-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
redis = { version = "0.23", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2.4"
number_prefix = "0.4"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.89"
rand = "0.8.5"
ethers-core = "2.0"
ethers-signers = "2.0"
hex = "0.4"
rmp-serde = "1.1"
csv = "1.3"
dotenvy = "0.15"
